@@ -1,4 +1,5 @@
 pisi 2.2.19 (??/02/2010)
 -------------------------
 
-#6748   - pisi fails to install a package when CWD doesn't exist anymore (real fix)
+6748   - pisi fails to install a package when CWD doesn't exist anymore (real fix)
+9991   - blacklisted system.base packages are not ignored during update
